# HomeTask5

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
Controler/: CMakeLists.txt  Controler.h
GUI/: CMakeLists.txt  GUI.cpp  Painter.h  View.h
GraphicPrimitives/: CMakeLists.txt  Figure.h  GraphicPrimitives.cpp  GraphicPrimitives.h  Point.h
GraphicPrimitivesModel/: CMakeLists.txt  GraphicPrimitivesModel.cpp  GraphicPrimitivesModel.h
ProjectManager/: CMakeLists.txt  ProjectManager.h
docs/: Controler_8h_source.html  Figure_8h_source.html  GraphicPrimitives_8h_source.html  Point_8h_source.html  ProjectManager_8h_source.html  View_8h_source.html  annotated.html  classGUI_1_1Canvas.html  classGUI_1_1Painter.html  classGUI_1_1Painter_a04c4f659a58e794eefee2d45a8e64ebc_icgraph.map  classGUI_1_1Painter_a40a7951035912848695e86d1c76ea3d8_icgraph.map  classGUI_1_1Painter_a40a7951035912848695e86d1c76ea3d8_icgraph.md5  classGUI_1_1Painter_a57e0ad4c27872b00af696107e57c9e55_cgraph.md5  classGUI_1_1View-members.html  classGUI_1_1View.html  classGUI_1_1View_a0a0ab16cce2b46fd937e27c259ccd932_cgraph.map  classGraphicPrimitive_1_1Circle-members.html  classGraphicPrimitive_1_1Circle.html  classGraphicPrimitive_1_1Circle__coll__graph.md5  classGraphicPrimitive_1_1Ellipse.html  classGraphicPrimitive_1_1Ellipse__coll__graph.map  classGraphicPrimitive_1_1Figure__inherit__graph.map  classGraphicPrimitive_1_1Figure__inherit__graph.md5  classGraphicPrimitive_1_1InvalidFigure-members.html  classGraphicPrimitive_1_1InvalidFigure__inherit__graph.md5  classGraphicPrimitive_1_1Line-members.html  classGraphicPrimitive_1_1Line__coll__graph.md5  classGraphicPrimitive_1_1Line__inherit__graph.map  classGraphicPrimitive_1_1Rectangle__coll__graph.map  classGraphicPrimitive_1_1Square-members.html  classGraphicPrimitive_1_1Square__coll__graph.map  classGraphicPrimitive_1_1Square__inherit__graph.md5  classModel_1_1GraphicPrimitivesModel-members.html  classModel_1_1GraphicPrimitivesModel.html  (+31 more)
docs/html/: classes.html  (+49 more)
(+51 files in other folders)
